@@ -609,6 +609,32 @@ argument_list|,
 name|args
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|this
+operator|.
+name|isMultiValued
+argument_list|()
+condition|)
+block|{
+throw|throw
+operator|new
+name|SolrException
+argument_list|(
+name|SolrException
+operator|.
+name|ErrorCode
+operator|.
+name|SERVER_ERROR
+argument_list|,
+literal|"CurrencyField types can not be multiValued: "
+operator|+
+name|this
+operator|.
+name|typeName
+argument_list|)
+throw|;
+block|}
 name|this
 operator|.
 name|schema
@@ -904,6 +930,55 @@ block|{
 return|return
 literal|true
 return|;
+block|}
+annotation|@
+name|Override
+DECL|method|checkSchemaField
+specifier|public
+name|void
+name|checkSchemaField
+parameter_list|(
+specifier|final
+name|SchemaField
+name|field
+parameter_list|)
+throws|throws
+name|SolrException
+block|{
+name|super
+operator|.
+name|checkSchemaField
+argument_list|(
+name|field
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|field
+operator|.
+name|multiValued
+argument_list|()
+condition|)
+block|{
+throw|throw
+operator|new
+name|SolrException
+argument_list|(
+name|SolrException
+operator|.
+name|ErrorCode
+operator|.
+name|SERVER_ERROR
+argument_list|,
+literal|"CurrencyFields can not be multiValued: "
+operator|+
+name|field
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+throw|;
+block|}
 block|}
 annotation|@
 name|Override
