@@ -2267,6 +2267,21 @@ argument_list|)
 argument_list|)
 return|;
 block|}
+comment|/**    * Check's {@link org.apache.solr.schema.SchemaField} instances constructed     * using this field type to ensure that they are valid.    *    *<p>    * This method is called by the<code>SchemaField</code> constructor to     * check that it's initialization does not violate any fundemental     * requirements of the<code>FieldType</code>.  The default implementation     * does nothing, but subclasses may chose to throw a {@link SolrException}      * if invariants are violated by the<code>SchemaField.    *</p>    */
+DECL|method|checkSchemaField
+specifier|public
+name|void
+name|checkSchemaField
+parameter_list|(
+specifier|final
+name|SchemaField
+name|field
+parameter_list|)
+throws|throws
+name|SolrException
+block|{
+comment|// :NOOP:
+block|}
 block|}
 end_class
 end_unit
